# Bookstore_Scraper

./: .dist.env  .env.example  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Dockerfile  README.md  compose.yaml  compose.yml  pyproject.toml
scripts/: format.sh  lint.sh
src/: alembic.ini  settings.py
src/database/: env.py
src/database/models/: __init__.py  base.py  book_models.py
src/database/models/mixins/: __init__.py  mysql_priority_attempt.py  mysql_timestamps.py
src/database/versions/: 4d4033d84d0e_books.py
src/items/: book_items.py
src/items_book/: books_items.py
src/middlewares/: __init__.py  broken_proxy_rotator_middleware.py  http_proxy_middleware.py
src/parsers/: __init__.py  exceptions.py  parser_factory.py  response_parser.py
src/pipelines/: scraper_pipeline.py
src/rmq/commands/: consumer.py  producer.py
src/rmq/connections/: pika_select_connection.py
src/rmq/extensions/: rpc_task_consumer.py
src/rmq/middlewares/: delivery_tag_spider_middleware.py  task_toss_spider_middleware.py
src/rmq/pipelines/: item_producer_pipeline.py
src/rmq/spiders/: __init__.py  httpbin_spider.py  task_base_spider.py  task_to_multiple_results_spider.py  task_to_single_result_spider.py
src/rmq/utils/: task.py  task_status_codes.py
src/rmq/utils/decorators/: rmq_callback.py  rmq_errback.py
src/spiders/: books_spider.py
src/utils/: graceful_shutdown.py  logger_mixin.py  util.py
src/utils/funcs/: database.py
