[tool.poetry]
name = "scrapy-boilerplate-v2"
version = "0.1.0"
description = "Boilerplate for scraper projects"
authors = ["Stas Polos <polos_ss@groupbwt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.6"
black = "^23.11.0"
pytest = "^7.4.3"


[tool.ruff]
src = ["src"]
ignore = [
    "C901",  # too complex
    "E501",  # line too long, handled by black
    "E741",  # do not use variables named 'I', 'O' or 'l'
]
select = [
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
line-length = 120

[tool.ruff.lint]
select = [
    "D",  #  PEP 257
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.ruff.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.mypy]
strict = true
