[tool.poetry]
name = "scrapy-boilerplate-v2"
version = "0.1.0"
description = "Boilerplate for scraper projects"
authors = ["Stas Polos <polos_ss@groupbwt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
furl = "^2.1.3"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
pendulum = "^3.0.0"
mysqlclient = "^2.2.4"
pika = "^1.3.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.1"
black = "^24.4.2"
pytest = "^8.2.2"


[tool.ruff]
line-length = 120
src = ["src"]
exclude = ['rmq']

[tool.ruff.lint]
select = ["F", "I", "D", "PL", "E", "W", "UP", "T20", "C4", "C90", "PTH", "RET", "SIM"]
ignore = ["D104", "D107", "D205", "PLR2004", "SIM105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 12

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/*" = ["D"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
exclude = ["rmq"]

[[tool.mypy.overrides]]
module = [
    "scrapy.*",
    "furl.*",
    "pika.*",
    "MySQLdb.*",
]
ignore_missing_imports = true
